# utopia

./: .appveyor.yml  .clang-tidy  .clangd  .codecov.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CONTRIBUTING.md  LICENSE.md  README.md  bitbucket-pipelines.yml  codecov.yml  contributors.txt  utopia-all.sublime-project
utopia/: .appveyor.yml  .clang-format  CMakeGraphVizOptions.cmake  CMakeLists.txt  Doxyfile.txt  README.md  bench.cpp  contributors.txt  main.cpp  test.cpp  testCmake.sh  utopia.hpp  utopia.sublime-project  utopia_Base.cpp  utopia_Base.hpp  utopia_CiteUtopia.hpp  utopia_Config.hpp.in  utopia_DeprecatedHeaders.hpp  utopia_Instance.cpp  utopia_Instance.hpp  utopia_Version.hpp.in  utopia_fe_cuda_tuple.patch
utopia/.devcontainer/: Dockerfile  devcontainer.json
utopia/apps/: CMakeLists.txt  apps.cmake  petsc_example.cpp  utopia_AppBase.hpp  utopia_BratuFE.hpp  utopia_Coefficient.hpp  utopia_Elem.hpp  utopia_FEFunction.hpp  utopia_FunctionSpace.hpp  utopia_GeometricMultigrid.hpp  utopia_IsotropicPhaseField.hpp  utopia_LinearElasticityFE.hpp  utopia_MPITimeStatistics.hpp  utopia_MonodomainFE.hpp  utopia_MultiVariateElement.hpp  utopia_PhaseField.hpp  utopia_PoissonFE.hpp  utopia_PorousFlowFE.hpp  utopia_Quadrature.hpp  utopia_STHeatEquation.hpp  utopia_WeakThermoElasticity.hpp  utopia_app_utils.hpp  utopia_disc_test.cpp  utopia_elasticity_app.cpp  utopia_generic_grid_app.cpp  utopia_isotropic_phase_field_app.cpp  utopia_petsc_NeumannBoundaryConditions.hpp  utopia_petsc_neumann_app.cpp  utopia_petsc_sc_apps.cpp  utopia_petsc_tri_app.cpp  utopia_phase_field_app.cpp  utopia_poisson_app.cpp  utopia_sc_apps.cpp  utopia_space_time_app.cpp  utopia_therom_elast_app.cpp  utopia_trilinos_Poisson.hpp
utopia/backend/: CMakeLists.txt  utopia_Backends.hpp  utopia_Memory.hpp  utopia_MemoryPool.cpp  utopia_MemoryPool.hpp  utopia_ScalarBackend.hpp
utopia/benchmarks/: CMakeLists.txt  benchmarks.cmake  utopia_Benchmark.hpp  utopia_Benchmark_Access.hpp  utopia_Benchmark_Algorithms.hpp  utopia_Benchmark_BLAS1.cpp  utopia_Benchmark_BLAS1.hpp  utopia_Benchmark_BLAS2.hpp  utopia_Benchmark_BLAS3.hpp  utopia_Benchmark_Transform.hpp  utopia_benchmarks.cpp  utopia_benchmarks.hpp
utopia/build_docker/: CMakeCache.txt  CMakeDoxygenDefaults.cmake  Doxyfile.txt  Makefile  UtopiaConfig.cmake  UtopiaConfigVersion.cmake  cmake_install.cmake  utopia-config.cmake  utopia-config.makefile  utopia_Config.hpp  utopia_Version.hpp  utopia_bench  utopia_compiler_features.hpp  utopia_exec
utopia/cheatsheet/: README.md  Utopia_CheatSheet.bib  Utopia_CheatSheet.tex
utopia/cmake/: CodeCoverage.cmake  EnableAvflowMode.cmake  EnableFluyaMode.cmake  EnableFranetgMode.cmake  EnableLocalMode.cmake  FindARPACK.cmake  FindEigen3.cmake  FindGFortran.cmake  FindLAPACK.cmake  FindM3ELINSOL.cmake  FindMETIS.cmake  FindMPI.cmake  FindMPIExtended.cmake  FindMPIExtendedCygwin.cmake  FindMetis.cmake  FindOpenBLAS.cmake  FindOpenCL.cmake  FindOpenCLPlusPlus.cmake  FindPETSc.cmake  FindParMetis.cmake  FindPetsc.cmake  FindSLEPc.cmake  FindTRILINOS.cmake  FindThrust.cmake  FindTpetraExt.cmake  FindTrilinos.cmake  FindUmfpack.cmake  GenerateMakeConfig.cmake  InstallMakefileConfig.cmake  InstallPetsc.cmake  InstallPetscCygwin.cmake  InstallPetscDebug.cmake  InstallSlepc.cmake  InstallTrilinos.cmake  InstallYAMLCPP.cmake  MPICygwinHelper.cmake  PostInstall.cmake  ResolveCompilerPaths.cmake  TestInstall.cmake  UtopiaClangFormat.cmake  (+9 more)
utopia/core/: CMakeLists.txt  utopia_Allocations.hpp  utopia_Assert.hpp  utopia_Backend.hpp  utopia_BackendConvert.hpp  utopia_BackendInfo.hpp  utopia_BackendSpec.hpp  utopia_Castable.hpp  utopia_Clonable.hpp  utopia_Core.hpp  utopia_CoreDecprecatedHeaders.hpp  utopia_CppMacros.hpp  utopia_Device.hpp  utopia_DeviceView.hpp  utopia_Each.hpp  utopia_Each_Parallel.hpp  utopia_ElementWisePseudoInverse.hpp  utopia_Epsilon.hpp  utopia_Evaluator.hpp  utopia_ExprInliner.hpp  utopia_Factory.hpp  utopia_FactoryMethod.hpp  utopia_FillTypeQuery.hpp  utopia_For.hpp  utopia_ForwardDeclarations.hpp  utopia_Hanger.hpp  utopia_Instance.cpp  utopia_Instance.hpp  utopia_IsSubTree.hpp  utopia_Log.cpp  utopia_Log.hpp  utopia_Logger.cpp  utopia_Logger.hpp  utopia_Macros.hpp  utopia_MatChop.hpp  utopia_MaxRowNNZ.hpp  utopia_Memory.hpp  utopia_Monitoring.hpp  utopia_NormalizeRows.hpp  utopia_ParallelEach.hpp  (+19 more)
utopia/data/: K_hexa_10x10x10_3D  M_hexa_10x10x10_3D  RHS_10x10x10_hexa_3D  RHS_hexa_3D  SOLUTION_hexa_3D  UTOPIA.xml  UTOPIA_amesos.xml  UTOPIA_belos.xml
utopia/differentiable/: CMakeLists.txt  utopia_AutoDiff.hpp  utopia_AutoDiffExpr.hpp  utopia_AutoDiffExpr_Binary.hpp  utopia_AutoDiffExpr_Diag.hpp  utopia_AutoDiffExpr_Multiply.hpp  utopia_AutoDiffExpr_Reduce.hpp  utopia_AutoDiffExpr_Trace.hpp  utopia_AutoDiffExpr_Transposed.hpp  utopia_Differentiable.hpp  utopia_Simplify.hpp  utopia_Simplify_Binary.hpp  utopia_Simplify_Multiply.hpp
utopia/doc/: FIXES.txt  REQUEST_FOR_FEATURES.txt
utopia/example_usage_of_utopia/: Makefile  runplugin.sh  utopia_assembly_example.cpp  (+5 more)
utopia_fe/: CMakeGraphVizOptions.cmake  CMakeLists.txt  main.cpp  main_utopia_stk.cpp  test.cpp  utopia_Biomechanics.cpp  utopia_ContactSimParams.hpp  utopia_FEDSLBaseExamples.cpp  utopia_FEDSLBaseSolverExamples.cpp  utopia_FEDSLBaseSolverExamples.hpp  utopia_FEDSLLeastSquaresExamples.cpp  utopia_FEDSLLeastSquaresExamples.hpp  utopia_FEDSLMortarExamples.cpp  utopia_FEDSLMortarExamples.hpp  utopia_GeometryTest.cpp  utopia_GeometryTest.hpp  utopia_LibMeshBackend.hpp  utopia_LibMeshBackend_bkp.hpp  utopia_MixedFESpaceExample.cpp  utopia_MixedFESpaceExample.hpp  utopia_NormalTangentialCoordinateSystem.cpp  utopia_NormalTangentialCoordinateSystem.hpp  utopia_TimeDiffExamples.cpp  utopia_TransferAssemblerR.cpp  utopia_TransferAssemblerR.hpp  utopia_UGMeshReader.cpp  utopia_UGMeshReader.hpp  utopia_fe.cpp  utopia_fe.hpp  utopia_fe.sublime-project  utopia_fe_config.hpp.in
utopia_fe_2/: CMakeLists.txt  main.cpp  test.cpp  utopia_fe.hpp  utopia_fe_2.sublime-project  utopia_fe_Instance.cpp  utopia_fe_Instance.hpp  utopia_fe_config.hpp.in
(+3463 files in other folders)
